<resources>
    <string name="app_name">MyUnitTestKotlin</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="result">Result</string>
    <string name="calculate_circumference">Hitung Keliling</string>
    <string name="calculate_volume">Hitung Volume</string>
    <string name="calculate_surface_area">Hitung luas</string>
    <string name="save">Save</string>
</resources>